fix: add overflow auto to the feat box, add attr width for the thumb images and add underline for reviews

--- a/src/components/camper/DetailInfo/DetailInfo.module.css
+++ b/src/components/camper/DetailInfo/DetailInfo.module.css
@@ -19,6 +19,11 @@
   gap: 4px;
 }
 
+.reviewCountText {
+  text-decoration: underline;
+  text-underline-offset: 2px;
+}
+
 .camperStarIcon {
   fill: var(--icon-start-active-color);
 }
