--- a/src/components/camper/Features/Features.module.css
+++ b/src/components/camper/Features/Features.module.css
@@ -4,6 +4,8 @@
   background-color: var(--header-bg-color);
   width: 100%;
   max-width: 630px;
+  max-height: 564px;
+  overflow-y: auto;
 }
 
 .featSubTitle {
